[gd_scene load_steps=4 format=2]

[ext_resource path="res://Base_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Network_setup.gd" type="Script" id=2]
[ext_resource path="res://UI.gd" type="Script" id=3]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.50745
margin_right = 1.50745
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = -202.0
margin_right = 267.5
margin_bottom = -25.9999
custom_fonts/font = ExtResource( 1 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.5
margin_top = 24.0
margin_right = 267.5
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username_text_edit" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -428.857
margin_top = 125.139
margin_right = 416.143
margin_bottom = 229.139
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "enter username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Start_game" type="Button" parent="UI"]
margin_left = 27.0
margin_top = 27.0
margin_right = 391.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Device_ip_address" type="Label" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_right = 0.00012207
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn_locations" type="Node" parent="."]

[node name="1" type="Position2D" parent="Spawn_locations"]
position = Vector2( 903.465, 507.034 )

[node name="2" type="Position2D" parent="Spawn_locations"]
position = Vector2( 1022.56, 507.034 )

[node name="3" type="Position2D" parent="Spawn_locations"]
position = Vector2( 963.015, 641.188 )

[node name="4" type="Position2D" parent="Spawn_locations"]
position = Vector2( 764.789, 668.392 )

[node name="5" type="Position2D" parent="Spawn_locations"]
position = Vector2( 964.522, 779.935 )

[node name="6" type="Position2D" parent="Spawn_locations"]
position = Vector2( 1167.27, 659.348 )

[node name="Spawn_enemies" type="Node" parent="."]

[node name="e1" type="Position2D" parent="Spawn_enemies"]
position = Vector2( 510.049, 29.2072 )

[node name="e2" type="Position2D" parent="Spawn_enemies"]
position = Vector2( 784.405, 30.7146 )

[node name="e3" type="Position2D" parent="Spawn_enemies"]
position = Vector2( 1064.01, 33.7292 )

[node name="e4" type="Position2D" parent="Spawn_enemies"]
position = Vector2( 1331.55, 33.8011 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 9.183
[connection signal="pressed" from="Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="pressed" from="UI/Start_game" to="." method="_on_Start_game_pressed"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
